fix (styles): #2444 fix z-index of pref sidebar

--- a/content-src/components/PreferencesPane/PreferencesPane.scss
+++ b/content-src/components/PreferencesPane/PreferencesPane.scss
@@ -11,7 +11,7 @@
     right: 0;
     top: 0;
     width: 400px;
-    z-index: 11000;
+    z-index: 12000;
 
     h1 {
       border-bottom: solid 1px $faintest-black;
